--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,63 +9,63 @@
 
     --card: 0 0% 100%;
     --card-foreground: 20 14.3% 4.1%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
- 
+
     --primary: 24 9.8% 10%;
     --primary-foreground: 60 9.1% 97.8%;
- 
+
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
- 
+
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
- 
+
     --accent: 60 4.8% 95.9%;
     --accent-foreground: 24 9.8% 10%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
 
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
- 
+
     --card: 20 14.3% 4.1%;
     --card-foreground: 60 9.1% 97.8%;
- 
+
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
- 
+
     --primary: 60 9.1% 97.8%;
     --primary-foreground: 24 9.8% 10%;
- 
+
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 60 9.1% 97.8%;
- 
+
     --muted: 12 6.5% 15.1%;
     --muted-foreground: 24 5.4% 63.9%;
- 
+
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 60 9.1% 97.8%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
- 
+
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 24 5.7% 82.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
@@ -73,4 +73,112 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.avatar {
+  cursor: pointer;
+}
+media-controller:not([audio]) {
+  display: flex;
+  justify-content: center;
+  max-width: 1280px;
+  aspect-ratio: 16 / 9;
+
+  container: media-chrome / inline-size;
+}
+video {
+  width: 100%;
+}
+
+.centered-controls-overlay {
+  display: none;
+}
+
+@container (inline-size < 420px) {
+  .centered-controls-overlay {
+    display: flex;
+  }
+  media-control-bar {
+    display: none;
+  }
+}
+
+@container (420px <= inline-size <= 590px) {
+  .centered-controls-overlay {
+    display: flex;
+  }
+  media-control-bar {
+    display: flex;
+  }
+  media-control-bar media-play-button,
+  media-control-bar media-seek-backward-button,
+  media-control-bar media-seek-forward-button {
+    display: none;
+  }
+}
+
+@container (inline-size > 590px) {
+  .centered-controls-overlay {
+    display: none;
+  }
+  media-control-bar {
+    display: flex;
+  }
+}
+
+:where(.centered-controls-overlay) {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+}
+media-controller .centered-controls-overlay {
+  align-self: stretch;
+}
+[slot='centered-chrome'] {
+  margin: 0 15%;
+  --media-control-hover-background: none;
+  --media-control-background: none;
+}
+[slot='centered-chrome']:is(
+    media-play-button,
+    media-seek-backward-button,
+    media-seek-forward-button
+  ) {
+  padding: 0px;
+}
+[slot='centered-chrome']media-play-button {
+  width: 20%;
+}
+[slot='centered-chrome']:is(
+    media-seek-backward-button,
+    media-seek-forward-button
+  ) {
+  width: 15%;
+}
+
+media-loading-indicator {
+  position: absolute;
+  inset: 0;
+}
+
+media-airplay-button[mediaairplayunavailable],
+media-fullscreen-button[mediafullscreenunavailable],
+media-volume-range[mediavolumeunavailable],
+media-pip-button[mediapipunavailable] {
+  display: none;
+}
+
+style {
+  display: block;
+  white-space: pre;
+  font-family: monospace;
+  margin-left: 1em;
+  overflow-x: auto;
+}
+
+media-controller {
+  --media-primary-color: #c4b5fd;
+  --media-secondary-color: #38422c;
+  --media-control-hover-background: #54594d;
 }
